# Just-for-fun-NASA-Space-App-chall

./: .gitignore  INNOVATIVE_FEATURES.md  LICENSE  QUICK_START.md  README.md  TESTING_GUIDE.md  a.out  demo.py  quick_start.py  run_tests.py  start.sh  start_manual.sh
.github/workflows/: deploy.yml
backend/: README_PY_2.md  manifest.json  pyproject.toml
backend/app/: detect.py  main.py  orchestrator.py  pyramides.py  requirements.txt  store.py
backend/embiggen_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: __init__.py  test_detect.py  test_main.py  test_orchestrator.py  test_pyramides.py
backend/tiles/746fdbe3-56bb-4a1b-b038-119876d8888d_smoke_files/: vips-properties.xml
embiggen-your-eyes/: index.html  package-lock.json  package.json  tailwind.config.mjs  tailwind.config.ts  vite.config.ts
embiggen-your-eyes/src/: App.tsx  index.css
embiggen-your-eyes/src/api/: index.ts
frontend/: package-lock.json
frontend/src/components/: Toolbar.jsx  (+1 more)
frontend_legacy/: index.html  package.json
frontend_legacy/src/: App.jsx  styles.css
py#3/: annotations.py  apply_annotations_to_heatmap.py  compare_titles.py  compress_titles.py  detection_anomalies.py  generate_heatmap.py  layer_options.py  optimize_heatmap.py  serve_tiles.py  test_mvp_flow.py  tile_processing.py  websiteUser.py
scripts/: make_tiles_gdal.md  make_tiles_vips.md
tiles/: dbe983ef-1d7d-4f2c-9b5f-3b9cf3e3f26d_smoke.dzi
tiles/43761cb5-cb80-4798-bb8f-701ae00bf486_smoke_files/: vips-properties.xml
tiles/dbe983ef-1d7d-4f2c-9b5f-3b9cf3e3f26d_smoke_files/: vips-properties.xml
(+17 files in other folders)
