[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embiggen-backend"
version = "0.1.0"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "numpy>=1.26",
  "pillow>=10.4",
  "scikit-image>=0.24",
  "requests>=2.32"
]

# Configure setuptools package discovery for flat layout
[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*", "__pycache__*"]

